--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,36 @@
 body {
     background-color: grey;
 }
+
+#wrapper {
+    width: 95%;
+
+}
+
+#intro {
+    width: 100%;
+    float: left;
+}
+
+#content {
+    width: 100%;
+    float: right;
+}
+
+#footer {
+    width: 100%;
+
+}
+
+@media screen and (orientation:landscape) {
+    #intro {
+        width : 61.8%;
+    }
+    #content {
+        width: 38%;
+    }
+}
+
 @media screen and (max-width: 960px) {
     body {
         background-color: red;
