实现页面整体内容居中
wrapper的左右边距设置为auto即可。

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,10 @@ body {
 
 #wrapper {
     width: 95%;
-
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
 }
 
 #intro {
