修改文字样式
将提示文字放在footer区内，这样手机竖屏时，提示文字不会把正常内容挤到下面；
修改p样式。

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,16 @@ body {
 
 #footer {
     width: 100%;
+}
 
+p {
+    text-align: left;
+    text-indent: 2em;
+}
+
+p.tip {
+    font-size: 0.9em;
+    color: darkred;
 }
 
 @media screen and (orientation:landscape) {
